--- a/src/assets/styles/Sidebar.css
+++ b/src/assets/styles/Sidebar.css
@@ -10,19 +10,24 @@ a {
 }
 
 .main-container {
-  height: 101%;
-  width: 90px;
+  min-height: calc(90vh - 120px) ;
+  width: 80px;
   display: flex;
 }
 
 main {
+  margin-top: 100px;
   font-size: 25px;
   padding: 50px 60px;
 }
 
 .sidebar {
-  background: #E3F2FD;
+  top: 12%;
+  background: #E3F1FA;
   color: #111111;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  position: fixed;
 }
 
 .routes {
