Adição de função de criar peixe

--- a/src/assets/styles/FishRecord.css
+++ b/src/assets/styles/FishRecord.css
@@ -15,7 +15,7 @@
 .custom-file-image {
   display: flex;
   cursor: pointer;
-  width: 93%;
+  width: 170px;
   height: 116px;
   border-radius: 20px;
   justify-content: center;
